# active_panoptic_mapping

./: README.md  active_panoptic_mapping_ssh.rosinstall  apply_patches.sh  disable_opencv3_catkin_openexr.patch  environment.yml  use_eigen_catkin.patch
active_panoptic_mapping/: CMakeLists.txt  package.xml  setup.py
active_panoptic_mapping/app/: active_panoptic_mapping_node.cpp  experiment_manager.py  pano_seg_predictor.py
active_panoptic_mapping/config/habitat/: replica_embodied.yaml
active_panoptic_mapping/config/mapper/: confidence_weighted_count.yaml  panoptic_fusion.yaml  single_tsdf_mapper_base.yaml  single_tsdf_variable_count.yaml  variable_count.yaml
active_panoptic_mapping/config/pano_seg/: mask2former.yaml
active_panoptic_mapping/config/panoptic_segmentation/: mask2former.yaml
active_panoptic_mapping/config/planner/: active_panoptic_mapping_planner.yaml  panoptic_reconstruction_planner.yaml  uncertainty_weighted_tsdf_entropy.yaml  uncetainty_weighted_voxel_weight.yaml  volumetric_planner_base.yaml
active_panoptic_mapping/launch/: replay_experiment.launch  run.launch  run_experiment.launch
active_panoptic_mapping/rviz/: devel.rviz
active_panoptic_mapping/scripts/: create_replica_environment_configs.py  run_experiments.sh
active_panoptic_mapping/src/: pano_seg_predictor.py
active_panoptic_mapping/src/pano_seg/: __init__.py  predictor_factory.py  visualization.py
active_panoptic_mapping/src/planner/: panoptic_map.cpp
active_panoptic_mapping_core/: CMakeLists.txt  README.md  package.xml  setup.py
active_panoptic_mapping_core/src/mapper/: single_tsdf_ground_truth_id_tracker.cpp  single_tsdf_panoptic_id_tracker.cpp
active_panoptic_mapping_core/src/planner/: panoptic_map.cpp
active_panoptic_mapping_ros/: CMakeLists.txt  README.md  package.xml
active_panoptic_mapping_ros/app/: active_panoptic_mapping_node.cpp  experiment_manager.py  panoptic_segmentation_node.py
active_panoptic_mapping_ros/config/planner/: exploration_planner.yaml  panoptic_uncertainty.yaml  reconstruction_planner.yaml  volumetric_planner_base.yaml
active_panoptic_mapping_ros/launch/: replay_experiment.launch  run.launch  run_experiment.launch
active_panoptic_mapping_ros/models/mask2former_swin_tiny_replica/: config.yaml  metadata.json  model_final.pth
active_panoptic_mapping_ros/models/mask2former_swin_tiny_scannet/: config.yaml  metadata.json  model_final.pth
active_panoptic_mapping_ros/rviz/: devel.rviz
active_panoptic_mapping_ros/scripts/: create_replica_environment_configs.py  run_experiments.sh
active_panoptic_mapping_utils/: CMakeLists.txt  README.md  package.xml  setup.py
active_panoptic_mapping_utils/app/: evaluation_data_export_node.cpp  evaluation_manager.py  evaluation_manager_2.py  experiment_manager_node.py  mapping_experiment_manager.py  planning_experiment_manager.py  scannet_data_player.py
active_panoptic_mapping_utils/config/experiments/: scannet.yaml
active_panoptic_mapping_utils/config/mapper/: bayesian.yaml  panoptic_fusion_uncertainty.yaml  single_tsdf_base.yaml  variable_count.yaml
active_panoptic_mapping_utils/include/active_panoptic_mapping_utils/: evaluation_data_exporter.h
active_panoptic_mapping_utils/launch/: evaluate_experiments.launch  evaluate_experiments_2.launch  replay_planning_experiment.launch  run_experiment_scannet.launch  run_mapping_experiment_scannet.launch  run_mapping_experiments.launch  run_planning_experiment_replica.launch  test_evaluate_experiments.launch  test_evaluation_data_export.launch  test_panoptic_mapper.launch
active_panoptic_mapping_utils/scripts/: analyze_mapping_experiment_metrics.py  compute_calibration_histogram.py  create_replica_ground_truth_vertex_labels.py  create_scannet_ground_truth_vertex_labels.py  evaluate_replica_planning_experiments.sh  evaluate_scannet_mapping_experiments.sh  extract_scan_data.py  extract_scans_data.sh  plot_mapping_experiments_metrics.py  plot_planning_experiments_metrics.py  predict.py  predict_scannet_panoptic_labels.sh  predict_scannet_panoptic_seg.sh  run_planning_experiments.sh  visualize_mapping_experiments_results.sh  visualize_vertex_labels.py
active_panoptic_mapping_utils/src/: evaluation_data_exporter.cpp
active_panoptic_mapping_utils/srv/: ExportEvaluationData.srv
habitat_ros/: CMakeLists.txt  README.md
habitat_ros/app/: habitat_sim_node.py
habitat_ros/config/: default.yaml  rgbd.yaml
habitat_ros/launch/: habitat_ros.launch  habitat_sim.launch  run.launch
habitat_ros/rviz/: devel.rviz  test.rviz
habitat_ros/scripts/: preprocess_replica_scenes.py
habitat_ros/src/: habitat_sim_node.py
habitat_ros/src/habitat_ros/: async_simulator.py  conversion_utils.py  pid_position_controller.py  replica_to_nyu40.csv
habitat_ros/src/progmesh/: progmesh.cpp
panoptic_mapping_evaluation/: CMakeLists.txt  package.xml  setup.py
panoptic_mapping_evaluation/app/: evaluation_data_export_node.cpp  evaluation_manager_node.py  experiment_manager_node.py  scannet_data_player.py
panoptic_mapping_evaluation/config/experiments/: scannet.yaml
panoptic_mapping_evaluation/config/mapper/: bayesian.yaml  nyu40_detectron_labels.csv  panoptic_fusion.yaml  single_tsdf_base.yaml  variable_count.yaml  (+1 more)
panoptic_mapping_evaluation/launch/: evaluate_experiments.launch  run.launch  run_experiment_scannet.launch  run_experiment_with_online_predictor.launch  run_mapping_experiments.launch  test_evaluation_data_export.launch
panoptic_mapping_evaluation/scripts/: create_replica_ground_truth_vertex_labels.py  create_scannet_ground_truth_vertex_labels.py  evaluate_replica_planning_experiments.sh  evaluate_scannet_mapping_experiments.sh  plot_mapping_experiments_metrics.py  plot_planning_experiments_metrics.py  predict_scannet_panoptic_seg.sh  visualize_vertex_labels.py
panoptic_mapping_evaluation/src/: evaluation_data_exporter.cpp
panoptic_segmentation/: CMakeLists.txt  package.xml  setup.py
panoptic_segmentation/app/: panoptic_segmentation_node.py
panoptic_segmentation/launch/: test_pano_seg.launch
panoptic_segmentation/scripts/: predict.py
(+73 files in other folders)
