<?xml version="1.0"?>
<package format="2">
  <name>active_panoptic_mapping</name>
  <version>0.0.0</version>
  <description>The active_panoptic_mapping package</description>

  <maintainer email="giuliano@todo.todo">giuliano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>habitat_ros</depend>
  <depend>panoptic_mapping_ros</depend>
  

</package>
