<?xml version="1.0"?>
<package format="2">
  <name>active_panoptic_mapping</name>
  <version>0.0.0</version>
  <description>The active_panoptic_mapping package</description>

  <maintainer email="giuliano@todo.todo">giuliano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  
  <depend>tf2_ros</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>opencv3_catkin</depend>
  
  <depend>habitat_ros</depend>
  <depend>voxblox</depend>
  <depend>panoptic_mapping</depend>
  <depend>panoptic_mapping_ros</depend>
  <depend>panoptic_segmentation</depend>
  <depend>active_3d_planning_core</depend>
  <depend>active_3d_planning_ros</depend>
</package>
