<?xml version="1.0"?>
<package format="2">
  <name>panoptic_segmentation</name>
  <version>0.0.0</version>
  <description>A package for online panoptic segmentation</description>

  <maintainer email="giuliano@todo.todo">giuliano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>message_runtime</depend>
  
  <depend>opencv3_catkin</depend>
  
  <depend>habitat_ros</depend>
</package>
